Dark Mode Fixes
- Fixed transparent color of background menu
- Fixed hover color for submit button
- Fixed disabled colors of context menu items

Demo(s):
- https://screenshot.googleplex.com/69CPhnRjW36NCxP
- https://screenshot.googleplex.com/7aXqf9npxPjm9T4


Bug: b:469178659
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7268578
Commit-Queue: Diana OuYang <dianaou@google.com>
Cr-Commit-Position: refs/heads/main@{#1561377}

--- a/chrome/browser/resources/contextual_tasks/onboarding_tooltip.css
+++ b/chrome/browser/resources/contextual_tasks/onboarding_tooltip.css
@@ -51,6 +51,10 @@ cr-tooltip::part(tooltip)::after {
   font-weight: 500;
 }
 
+a {
+  color: var(--cr-link-color);
+}
+
 cr-icon-button {
   --cr-icon-button-margin-end: 0;
   --cr-icon-button-fill-color: var(--color-composebox-font);
